--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
     "@mui/styled-engine-sc": "^6.1.5",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.7.7",
     "gh-pages": "^6.2.0",
     "nodemailer": "^6.9.15",
@@ -29,7 +30,8 @@
     "react-loading": "^2.0.3",
     "react-modal": "^3.16.1",
     "react-scroll": "^1.9.0",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
