--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-modal": "^3.16.1",
     "react-scroll": "^1.9.0",
     "styled-components": "^6.1.13",
+    "swiper": "^12.0.3",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
